Change to xenial distro for newer sqlite3

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+dist: xenial
+
 language: python
 
 sudo: false
@@ -30,12 +32,6 @@ matrix:
       env: TOX_ENV=py27-django110
     - python: "2.7"
       env: TOX_ENV=py27-django111
-
-before_install:
-  - sudo apt-get autoremove sqlite3
-  - sudo apt-get -y update
-  - sudo apt-get install sqlite3=3.8.3
-  - sudo sqlite3 -version
 
 install:
   - pip install tox coverage codecov
