Fix for docs build

--- a/tox.ini
+++ b/tox.ini
@@ -45,12 +45,12 @@ commands=
     flake8 {toxinidir}/django_bleach
 
 [testenv:docs]
+changedir = docs
 deps =
     sphinx
-    six
-changedir = docs
-commands=
-    sphinx-build -b html . _build/html
+    sphinx-rtd-theme
+commands =
+    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {toxinidir}/docs/_build/html
 
 [testenv:upload_coverage]
 deps = codacy-coverage
