--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,6 @@
 [tox]
 envlist =
-    {py27,py36,py37,py38}-django111,
-    {py36,py37,py38}-django{20,21,22},
+    {py36,py37,py38}-django{22,31},
     flake8,
     docs,
     coverage,
@@ -17,10 +16,8 @@ setenv =
 
 deps =
     bleach
-    django111: Django==1.11.*
-    django20: Django==2.0.*
-    django21: Django>=2.1,<2.2
     django22: Django>=2.2,<3.0
+    djagno31: Django>=3.1,<3.2
     mock
 
 extras =
@@ -40,9 +37,20 @@ commands =
 
 [testenv:flake8]
 basepython = python
-deps = flake8
-commands=
-    flake8 {toxinidir}/django_bleach
+deps =
+    flake8
+    flake8-broken-line
+    flake8-bugbear
+    flake8-builtins
+    flake8-coding
+    flake8-commas
+    flake8-comprehensions
+    flake8-eradicate
+    flake8-quotes
+    flake8-tidy-imports
+    pep8-naming
+commands =
+    {envpython} -m flake8 {toxinidir}/django_bleach
 
 [testenv:docs]
 changedir = docs
@@ -58,3 +66,14 @@ passenv =
     CODACY_PROJECT_TOKEN
 commands =
     python-codacy-coverage -r coverage.xml
+
+[flake8]
+exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,tests,data
+ignore = E800, W503, C812, C813, C815, C818, C819, C408
+max-line-length = 119
+# flake8-quotes
+inline-quotes = double
+# flake8-coding
+no-accept-encodings = True
+# flake8-tidy-imports
+banned-modules = __future__ = this project supports python3 only
