--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,40 @@
 [bdist_wheel]
 universal = 1
+
+[flake8]
+max-line-length = 119
+exclude =
+    *.egg-info,
+    .git,
+    .settings,
+    .tox,
+    build,
+    dist,
+    docs,
+    requirements,
+    tmp,
+    *migrations*,
+    tests,
+    data
+ignore =
+    E800,
+    W503,
+    C812,
+    C813,
+    C815,
+    C818,
+    C819,
+    C408
+
+[isort]
+line_length = 88
+multi_line_output = 3
+lines_after_imports = 2
+combine_as_imports = true
+include_trailing_comma = true
+balanced_wrapping = true
+skip = manage.py, migrations, .tox
+known_standard_library = mock
+known_django = django
+known_first_party = django_bleach
+sections = FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LIB, LOCALFOLDER
