--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py36,py37,py38}-django{22,31},
+    {py36,py37,py38}-django{22,31,32},
     flake8,
     docs,
     coverage,
@@ -18,6 +18,7 @@ deps =
     bleach
     django22: Django>=2.2,<3.0
     djagno31: Django>=3.1,<3.2
+    djagno32: Django>=3.2,<3.3
     mock
 
 extras =
