--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py36,py37,py38}-django{22,31,32},
+    {py36,py37,py38,p39}-django{22,31,32},
     flake8,
     docs,
     coverage,
