--- a/tox.ini
+++ b/tox.ini
@@ -27,8 +27,7 @@ extras =
 [testenv:coverage]
 changedir = testproject
 deps =
-    coverage
-    mock
+    -rtestproject/requirements.txt
 commands =
     coverage erase
     coverage run --rcfile ../.coveragerc manage.py test --failfast django_bleach
@@ -39,17 +38,7 @@ commands =
 [testenv:flake8]
 basepython = python
 deps =
-    flake8
-    flake8-broken-line
-    flake8-bugbear
-    flake8-builtins
-    flake8-coding
-    flake8-commas
-    flake8-comprehensions
-    flake8-eradicate
-    flake8-quotes
-    flake8-tidy-imports
-    pep8-naming
+    -rtestproject/requirements.txt
 commands =
     {envpython} -m flake8 {toxinidir}/django_bleach
 
@@ -75,6 +64,6 @@ max-line-length = 119
 # flake8-quotes
 inline-quotes = double
 # flake8-coding
-no-accept-encodings = True
+accept-encodings = utf-8,utf-16
 # flake8-tidy-imports
 banned-modules = __future__ = this project supports python3 only
