--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9, ]
+        python-version: [ 3.6, 3.7, 3.8, 3.9, 3.10.0]
         django-version: [
             '2.2',
             '3.2',
