Added pre-commit hooks (#41)

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,14 +28,14 @@ ignore =
     C408
 
 [isort]
-line_length = 88
+line_length = 119
 multi_line_output = 3
 lines_after_imports = 2
 combine_as_imports = true
 include_trailing_comma = true
 balanced_wrapping = true
-skip = manage.py, migrations, .tox
+skip = manage.py, migrations, .tox, .env
 known_standard_library = mock
 known_django = django
-known_first_party = django_bleach
-sections = FUTURE, STDLIB, DJANGO, THIRDPARTY, FIRSTPARTY, LIB, LOCALFOLDER
+known_first_party = django_bleach, test_project
+sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
