Include testproject in sdist (#39)
For debian package building

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include README.rst
 include CHANGELOG.md
 include docs/*.rst
 prune docs/_build
+graft testproject
 global-exclude coverage.xml
 global-exclude .coverage
 recursive-exclude * *.pyc __pycache__ .DS_Store
