--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,10 +8,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ 3.6, 3.7, 3.8, 3.9, 3.10.0]
+        python-version: [3.8, 3.9, 3.10.1]
         django-version: [
             '2.2',
             '3.2',
+            '4.0',
         ]
         os: [
           ubuntu-20.04,
