--- a/testproject/requirements.txt
+++ b/testproject/requirements.txt
@@ -12,37 +12,36 @@ alabaster==0.7.12
     # via sphinx
 asgiref==3.4.1
     # via django
-attrs==21.2.0
+attrs==21.4.0
     # via
     #   flake8-bugbear
     #   flake8-eradicate
 babel==2.9.1
     # via sphinx
-bleach==3.3.1
+bleach==4.1.0
     # via -r requirements.in
-certifi==2021.5.30
+certifi==2021.10.8
     # via requests
-charset-normalizer==2.0.3
+charset-normalizer==2.0.10
     # via requests
-click==8.0.1
+click==8.0.3
     # via pip-tools
-coverage==5.5
+coverage==6.2
     # via -r requirements.in
-django==3.2.5
+django==4.0.1
     # via -r requirements.in
-docutils==0.16
+docutils==0.17.1
     # via
     #   sphinx
     #   sphinx-rtd-theme
 eradicate==2.0.0
     # via flake8-eradicate
-flake8==3.9.2
+flake8==4.0.1
     # via
     #   -r requirements.in
     #   flake8-broken-line
     #   flake8-bugbear
     #   flake8-builtins
-    #   flake8-coding
     #   flake8-commas
     #   flake8-comprehensions
     #   flake8-eradicate
@@ -50,31 +49,29 @@ flake8==3.9.2
     #   flake8-quotes
     #   flake8-tidy-imports
     #   pep8-naming
-flake8-broken-line==0.3.0
+flake8-broken-line==0.4.0
     # via -r requirements.in
-flake8-bugbear==21.4.3
+flake8-bugbear==21.11.29
     # via -r requirements.in
 flake8-builtins==1.5.3
     # via -r requirements.in
-flake8-coding==1.3.2
+flake8-commas==2.1.0
     # via -r requirements.in
-flake8-commas==2.0.0
+flake8-comprehensions==3.7.0
     # via -r requirements.in
-flake8-comprehensions==3.5.0
-    # via -r requirements.in
-flake8-eradicate==1.1.0
+flake8-eradicate==1.2.0
     # via -r requirements.in
 flake8-polyfill==1.0.2
     # via pep8-naming
-flake8-quotes==3.2.0
+flake8-quotes==3.3.1
     # via -r requirements.in
-flake8-tidy-imports==4.3.0
+flake8-tidy-imports==4.5.0
     # via -r requirements.in
-idna==3.2
+idna==3.3
     # via requests
-imagesize==1.2.0
+imagesize==1.3.0
     # via sphinx
-jinja2==3.0.1
+jinja2==3.0.3
     # via sphinx
 markupsafe==2.0.1
     # via jinja2
@@ -82,39 +79,37 @@ mccabe==0.6.1
     # via flake8
 mock==4.0.3
     # via -r requirements.in
-packaging==21.0
+packaging==21.3
     # via
     #   bleach
     #   sphinx
-pep517==0.11.0
+pep517==0.12.0
     # via pip-tools
-pep8-naming==0.12.0
+pep8-naming==0.12.1
     # via -r requirements.in
-pip-tools==6.2.0
+pip-tools==6.4.0
     # via -r requirements.in
-pycodestyle==2.7.0
+pycodestyle==2.8.0
     # via flake8
-pyflakes==2.3.1
+pyflakes==2.4.0
     # via flake8
-pygments==2.9.0
+pygments==2.11.2
     # via sphinx
-pyparsing==2.4.7
+pyparsing==3.0.6
     # via packaging
-pytz==2021.1
-    # via
-    #   babel
-    #   django
-requests==2.26.0
+pytz==2021.3
+    # via babel
+requests==2.27.1
     # via sphinx
 six==1.16.0
     # via bleach
-snowballstemmer==2.1.0
+snowballstemmer==2.2.0
     # via sphinx
-sphinx==4.1.1
+sphinx==4.3.2
     # via
     #   -r requirements.in
     #   sphinx-rtd-theme
-sphinx-rtd-theme==0.5.2
+sphinx-rtd-theme==1.0.0
     # via -r requirements.in
 sphinxcontrib-applehelp==1.0.2
     # via sphinx
@@ -130,13 +125,13 @@ sphinxcontrib-serializinghtml==1.1.5
     # via sphinx
 sqlparse==0.4.2
     # via django
-tomli==1.1.0
+tomli==2.0.0
     # via pep517
-urllib3==1.26.6
+urllib3==1.26.7
     # via requests
 webencodings==0.5.1
     # via bleach
-wheel==0.36.2
+wheel==0.37.1
     # via pip-tools
 
 # The following packages are considered to be unsafe in a requirements file:
