--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py36,py37,py38,p39}-django{22,31,32},
+    {py38,p39,p310}-django{22,32,4},
     flake8,
     docs,
     coverage,
@@ -17,8 +17,8 @@ setenv =
 deps =
     bleach
     django22: Django>=2.2,<3.0
-    djagno31: Django>=3.1,<3.2
     djagno32: Django>=3.2,<3.3
+    djagno4: Django>=4.0,<4.1
     mock
 
 extras =
@@ -59,11 +59,9 @@ commands =
 
 [flake8]
 exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,tests,data
-ignore = E800, W503, C812, C813, C815, C818, C819, C408
+ignore = E800, W503, C812, C813, C815, C818, C819, C408, C101
 max-line-length = 119
 # flake8-quotes
 inline-quotes = double
-# flake8-coding
-accept-encodings = utf-8,utf-16
 # flake8-tidy-imports
 banned-modules = __future__ = this project supports python3 only
