--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install django==${{ matrix.django-version }} bleach coverage mock
+        pip install django==${{ matrix.django-version }} bleach<5 coverage mock
         python setup.py install
     - name: Run coverage
       run: |
