Corrected typos in tox dependencies (#56)

--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,8 @@ setenv =
 deps =
     bleach
     django22: Django>=2.2,<3.0
-    djagno32: Django>=3.2,<3.3
-    djagno4: Django>=4.0,<4.1
+    django32: Django>=3.2,<3.3
+    django4: Django>=4.0,<4.1
     mock
 
 extras =
