--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install django==${{ matrix.django-version }} "bleach<5" coverage mock
+        pip install django==${{ matrix.django-version }} "bleach>=5,<6" coverage mock
         python setup.py install
     - name: Run coverage
       run: |
@@ -59,7 +59,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --pre django "bleach<5" coverage mock
+        pip install --pre django "bleach>=5,<6" coverage mock
         python setup.py install
     - name: Run tests
       run: |
