ci: Added isort and codespell (#57)

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,8 @@ known_standard_library = mock
 known_django = django
 known_first_party = django_bleach, test_project
 sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
+[codespell]
+skip = ./.git,./.env,./.venv,./.tox,./.eggs,./django_bleach/tests,./docs/_build,./testproject,./htmlcov
+count =
+quiet-level = 3
