--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,8 @@ envlist =
     upload_coverage
 
 [testenv]
-changedir = testproject
 commands =
-    python -Wd manage.py test django_bleach
+    python -Wd testproject/manage.py test django_bleach
 
 setenv =
     PYTHONDONTWRITEBYTECODE=1
@@ -25,15 +24,14 @@ extras =
     test
 
 [testenv:coverage]
-changedir = testproject
 deps =
     -rtestproject/requirements.txt
 commands =
     coverage erase
-    coverage run --rcfile ../.coveragerc manage.py test --failfast django_bleach
-    coverage report --rcfile ../.coveragerc
-    coverage html --rcfile ../.coveragerc
-    coverage xml --rcfile ../.coveragerc
+    coverage run --rcfile .coveragerc testproject/manage.py test --failfast django_bleach
+    coverage report --rcfile .coveragerc
+    coverage html --rcfile .coveragerc
+    coverage xml --rcfile .coveragerc
 
 [testenv:flake8]
 basepython = python
