build: Bumpversion integration (#60)
* Preparing for bump2version and dropping django 2.2

* Preparing for bump2version and dropping django 2.2

* Preparing for bump2version and dropping django 2.2

* build: Use imported version in setup.py

* docs: fix version in conf

* ci: bumpversion commit

* Update to f string

* Added LGTM badge

* Added LGTM badge

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,13 @@ repos:
     rev: v2.32.1
     hooks:
       - id: pyupgrade
-        args: ["--py36-plus"]
+        args: ["--py38-plus"]
+
+  - repo: https://github.com/adamchainz/django-upgrade
+    rev: '1.4.0'
+    hooks:
+      - id: django-upgrade
+        args: [--target-version, "3.2"]
 
   - repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
