--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,28 @@
+[bumpversion]
+current_version = 2.0.0
+commit = True
+tag = False
+
+[bumpversion:file:django_bleach/__init__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
+
+[bumpversion:file:docs/conf.py]
+search = version = '{current_version}'
+replace = version = '{new_version}'
+
+[bumpversion:file:CHANGELOG.md]
+search =
+	[unreleased](https://github.com/marksweb/django-bleach/compare/{current_version}...master) changes
+	-------------------------------------------------------------------------------------
+replace =
+	[unreleased](https://github.com/marksweb/django-bleach/compare/{new_version}...master) changes
+	-------------------------------------------------------------------------------------
+
+	Version {new_version}
+	=============
+    **{utcnow:%%d-%%m-%%Y}**
+
 [bdist_wheel]
 universal = 1
 
@@ -5,28 +30,28 @@ universal = 1
 accept-encodings = utf-8,utf-16
 max-line-length = 119
 exclude =
-    *.egg-info,
-    .git,
-    .settings,
-    .tox,
-    build,
-    dist,
-    docs,
-    requirements,
-    tmp,
-    *migrations*,
-    tests,
-    data
+	*.egg-info,
+	.git,
+	.settings,
+	.tox,
+	build,
+	dist,
+	docs,
+	requirements,
+	tmp,
+	*migrations*,
+	tests,
+	data
 ignore =
-    E800,
-    W503,
-    C812,
-    C813,
-    C815,
-    C818,
-    C819,
-    C408,
-    C101
+	E800,
+	W503,
+	C812,
+	C813,
+	C815,
+	C818,
+	C819,
+	C408,
+	C101
 
 [isort]
 line_length = 119
