ci: Prefix dependabot commit messages

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,5 +2,8 @@ version: 2
 updates:
 - package-ecosystem: github-actions
   directory: "/"
+  commit-message:
+      prefix: "ci:"
+      include: "scope"
   schedule:
     interval: weekly
