--- a/tox.ini
+++ b/tox.ini
@@ -1,64 +1,23 @@
 [tox]
-envlist =
-    {py38,p39,p310}-django{32,4},
-    flake8,
-    docs,
-    coverage,
-    upload_coverage
+requires =
+    tox>=4.2
+env_list =
+    py312-django{42}
+    py311-django{42, 41}
+    py310-django{42, 41, 40, 32}
+    py39-django{42, 41, 40, 32}
+    py38-django{42, 41, 40, 32}
 
 [testenv]
-commands =
-    python -Wd testproject/manage.py test django_bleach
-
-setenv =
+package = wheel
+deps =
+    -r {toxinidir}/requirements/{envname}.txt
+set_env =
+    PYTHONDEVMODE = 1
     PYTHONDONTWRITEBYTECODE=1
-
-deps =
-    bleach
-    django32: Django>=3.2,<3.3
-    django4: Django>=4.0,<4.2
-    mock
-
-extras =
-    test
-
-[testenv:coverage]
-deps =
-    -rtestproject/requirements.txt
 commands =
-    coverage erase
-    coverage run --rcfile .coveragerc testproject/manage.py test --failfast django_bleach
-    coverage report --rcfile .coveragerc
-    coverage html --rcfile .coveragerc
-    coverage xml --rcfile .coveragerc
-
-[testenv:flake8]
-basepython = python
-deps =
-    -rtestproject/requirements.txt
-commands =
-    {envpython} -m flake8 {toxinidir}/django_bleach
-
-[testenv:docs]
-changedir = docs
-deps =
-    sphinx
-    sphinx-rtd-theme
-commands =
-    sphinx-build -W -b html -d {envtmpdir}/doctrees .  {toxinidir}/docs/_build/html
-
-[testenv:upload_coverage]
-deps = codacy-coverage
-passenv =
-    CODACY_PROJECT_TOKEN
-commands =
-    python-codacy-coverage -r coverage.xml
-
-[flake8]
-exclude = *.egg-info,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,tests,data
-ignore = E800, W503, C812, C813, C815, C818, C819, C408, C101
-max-line-length = 119
-# flake8-quotes
-inline-quotes = double
-# flake8-tidy-imports
-banned-modules = __future__ = this project supports python3 only
+    python \
+      -W error::ResourceWarning \
+      -W error::DeprecationWarning \
+      -W error::PendingDeprecationWarning \
+      -m coverage run testproject/manage.py test django_bleach
