--- a/.editorconfig
+++ b/.editorconfig
@@ -11,4 +11,10 @@ indent_style = space
 indent_size = 4
 
 [*.py]
-max_line_length = 120
+max_line_length = 80
+
+[*.toml]
+indent_size = 2
+
+[*.yml]
+indent_size = 2
