--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 3.0.1
+current_version = 3.1.0
 commit = True
 tag = False
 
@@ -8,8 +8,8 @@ search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [bumpversion:file:docs/conf.py]
-search = version = '{current_version}'
-replace = version = '{new_version}'
+search = version = "{current_version}"
+replace = version = "{new_version}"
 
 [bumpversion:file:CHANGELOG.md]
 search = 
@@ -25,46 +25,6 @@ replace =
 
 [bdist_wheel]
 universal = 1
-
-[flake8]
-accept-encodings = utf-8,utf-16
-max-line-length = 119
-exclude = 
-	*.egg-info,
-	.git,
-	.settings,
-	.tox,
-	build,
-	dist,
-	docs,
-	requirements,
-	tmp,
-	*migrations*,
-	tests,
-	data
-ignore = 
-	E800,
-	W503,
-	C812,
-	C813,
-	C815,
-	C818,
-	C819,
-	C408,
-	C101
-
-[isort]
-line_length = 119
-multi_line_output = 3
-lines_after_imports = 2
-combine_as_imports = true
-include_trailing_comma = true
-balanced_wrapping = true
-skip = manage.py, migrations, .tox, .env
-known_standard_library = mock
-known_django = django
-known_first_party = django_bleach, test_project
-sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 
 [codespell]
 skip = ./.git,./.env,./.venv,./.tox,./.eggs,./django_bleach/tests,./docs/_build,./testproject,./htmlcov
